# MultiAgent_SAP

MultiAgent/: DESIGN.md  README.md  pyproject.toml  requirements.txt  walkthrough.md
MultiAgent/artifacts/: registry.json
MultiAgent/data/: raw_tools.json  run_a.jsonl  run_b.jsonl
MultiAgent/docs/: DIAGRAMS_EXPLAINED.md  END_TO_END_SYNTHETIC_TOOLUSE_TRACE_IMPLEMENTATION.md  README.md
MultiAgent/docs/diagrams/: mermaid-theme-bw.json  quality-gate-statemachine.mmd  render-bw.sh  strict-plan-sequence.mmd
MultiAgent/reports/: eval_run_a.json  eval_run_b.json
MultiAgent/src/synthetic_tooluse/: __init__.py  cli.py  config.py
MultiAgent/src/synthetic_tooluse/agents/: assistant_orchestrator.py  base.py  judge.py  repair.py  user_simulator.py
MultiAgent/src/synthetic_tooluse/evaluation/: metrics.py  trace_analyzer.py
MultiAgent/src/synthetic_tooluse/execution/: mock_engine.py  state.py
MultiAgent/src/synthetic_tooluse/generation/: arg_resolution.py  chain_planner.py  context_manager.py  endpoint_audit.py  execution_budget.py  execution_dedupe.py  intents.py  llm_telemetry.py  pipeline.py  steering.py  validator.py
MultiAgent/src/synthetic_tooluse/graph/: builder.py  sampler.py
MultiAgent/src/synthetic_tooluse/registry/: normalizer.py
MultiAgent/src/synthetic_tooluse/schemas/: conversation.py  evaluation.py  graph.py  registry.py
MultiAgent/tests/e2e/: test_end_to_end.py
MultiAgent/tests/unit/: test_registry.py
